--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,17 @@
 
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
 		<spring-boot.version>3.4.0</spring-boot.version>
 		<java.version>23</java.version>
 		<kotlin.version>2.1.0</kotlin.version>
+		<selenide.version>7.6.1</selenide.version>
+
+		<apache-commons-lang.version>3.17.0</apache-commons-lang.version>
+		<apache-commons-collection.version>4.5.0-M2</apache-commons-collection.version>
+		<apache-commons-text.version>1.12.0</apache-commons-text.version>
 	</properties>
 
 
@@ -46,6 +54,25 @@
 		</dependency>
 
 
+		<!-- APACHE COMMONS UTILS -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${apache-commons-lang.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>${apache-commons-collection.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>${apache-commons-text.version}</version>
+		</dependency>
+
+
+		<!-- TESTING GOODIES INCL SPRING, SELENIDE, JUNIT 5 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -59,7 +86,7 @@
 		<dependency>
 			<groupId>com.codeborne</groupId>
 			<artifactId>selenide</artifactId>
-			<version>7.6.1</version>
+			<version>${selenide.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -71,10 +98,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring-boot.version}</version>
 			</plugin>
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
+				<version>${kotlin.version}</version>
 				<configuration>
 					<args>
 						<arg>-Xjsr305=strict</arg>
