Worked on making hte web URL configurable.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
+# SPRING
+# ======================================================================================================================
 spring:
   application:
     name: qabase
+
+
+# CUSTOM APP
+# ======================================================================================================================
+web-application:
+  base-url: "https://google.com"
